k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-clusterip-service
spec:
  selector:
    app: motd
  ports:
  - protocol: TCP
    port: 5555
    targetPort: 5555
