k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motd-ingress
spec:
  rules:
  - host: motd.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motd-clusterip-service
            port:
              number: 5555
